--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -42,4 +42,6 @@
     <color name="hint_text">#FDD207</color>
     <color name="black_font_alpha">#EA3C3E</color>
 
+    <color name="anythink_0042DF">#0042DF</color>
+
 </resources>
