--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="lottery_prize_size">50</dimen>
+    <dimen name="anythink_title_size">18sp</dimen>
 </resources>
